--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <tbody>
                       <tr>
                         <td>Best Price</td>
-                        <td>$1299</td>
+                        <td>$<span id="base-price">1299</span></td>
                       </tr>
                       <tr>
                         <td>Extra Memory Cost</td>
@@ -85,7 +85,7 @@
               <div class="mt-4">
                 <p class="fw-bold">Add Pomo Code</p>
                 <div class="input-group mb-3">
-                  <input
+                  <input id="promo-text"
                     type="text"
                     class="form-control form-control-lg"
                     aria-label="Recipient's username"
@@ -94,7 +94,7 @@
                   <button
                     class="btn btn-danger"
                     type="button"
-                    id="button-addon2"
+                    id="promo-btn"
                   >
                     Button
                   </button>
@@ -106,10 +106,10 @@
       </section>
       <section class="container text-center mb-4">
         <hr />
-        <h1>Total : $1299</h1>
+        <h1>Total : $<span id="bonus">1299</span></h1>
       </section>
     </main>
-    <script src="js/app.js"></script>
+    <script src="js/app1.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
